styles.css
body {
  font-family: "Arial", sans-serif;
  background: linear-gradient(
    to bottom,
    rgb(229, 255, 115),
    rgb(241, 255, 176),
    rgb(255, 255, 255)
  );
  margin: 0;
  padding-right: 10px;
  padding-left: 10px;
}

.button {
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);/
}

.button:hover {
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.is-primary{
  background-color: #899945 !important;
}

nav.navbar {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  height: 200px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.logo {
  padding-top: 20px;
  width: 100px;
}
.navbar,
.navbar-menu,
.navbar-start,
.navbar-end {
  align-items: stretch;
  display: flex;
  padding: 0;
}

.navbar-menu {
  display: flex;
  justify-content: center;
  flex-grow: 1;
  flex-shrink: 0;
  margin-top: 10px;
  margin-bottom: 60px;
}

.navbar-start {
  justify-content: flex-start;
  margin-right: auto;
}
.navbar-end {
  justify-content: flex-end;
  margin-left: auto;
}
.navbar {
  display: flex;
}
.navbar-item {
  display: flex;
  height: 40px;
  margin-top: 20px;
  margin-right: 8px;
  border-radius: 8px;
  border: 1px solid #b8b8b8;
  transition: background-color 0.3s, color 0.3s;
}
.navbar-item:hover {
  background-color: #899945 !important; 
  color: white !important;
  border: 1px solid #a0b250 !important; 
}

.selected {
  background-color: #a0b250;
  color: white;
  border: none;
}


/* Home Screen Styles */

.carousel {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.swiper-container {
  width: 60%;
  margin: 20px auto;
}

.swiper-slide img {
  width: 100%;
  object-fit: cover;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.swiper-button-next,
.swiper-button-prev {
  display: none !important;
}

section.section {
  margin-bottom: 20px;
}

.box {
  text-align: center;
  padding: 20px;
  border-radius: 5px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  background-color: #fff;
  text-decoration: none;
  color: #333;
  transition: background-color 0.3s;
}

.category_box {
  background-color: #899945;
  padding: 12px !important;
}

.category_image {
  border-radius: 8px;
}

/* Floating Login Icon */
.floating-login-icon {
  position: fixed;
  top: 20px;
  left: 30px;
  background-color: #fff;
  padding: 10px;
  border-radius: 50%;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  transition: background-color 0.3s;
  z-index: 999;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.floating-login-icon:hover {
  background-color: #f0f0f0;
}

.floating-login-icon img {
  width: 30px; 
}

/* Login Modal */
#loginModal {
  display: none;
}

.login-modal-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 20px;
}

.login-modal-logo {
  max-width: 150px; 
  margin-bottom: 20px;
}

.field {
  margin-bottom: 15px;
}


/* Products Screen Styles */

.categoriesButtons {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 0px;
}

.categoriesButtons .buttons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.price{
  background-color: #e7e7e7 !important;
}

.floating-cart-icon {
  position: fixed;
  bottom: 10px;
  right: 20px;
  background-color: #899945;
  padding: 20px;
  border-radius: 50%;
  cursor: pointer;
  transition: background-color 0.3s;
  z-index: 9999;
  width: 100px;
  height: 100px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  opacity: 0.9;
}
.floating-cart-icon:hover {
  opacity: 1;
}

.floating-cart-icon img {
  width: 50px;
}

.floating-cart-icon p {
  margin: 0;
  position: relative;
  bottom: 10px;
  left: 4px;
  font-size: 14px;
  color: #fff;
}

.modal {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
  background-color: #fff;
  padding: 20px;
  border-radius: 8px;
}

.modal-button {
  margin-top: 20px;
}

.cart-item {
  border-bottom: 1px solid #ccc;
  margin-bottom: 10px;
  padding-bottom: 10px;
}

.cart-item .media img {
  border-radius: 5px;
}

.cart-item .media-content {
  padding-left: 10px;
}

.cart-item .media-right {
  display: flex;
  align-items: center;
}

.cart-item button {
  margin-left: 5px;
}

/* Contact Styles */

.contact-container {
  max-width: 800px;
  margin: 0 auto;
}

.contact-info {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  margin-top: 20px;
}

.contact-info-item {
  flex: 1;
  max-width: 300px;
  text-align: center;
  margin: 10px;
}

.contact-icon{
  margin-right: 10px;
}

.contact-info-item h3 {
  margin-bottom: 10px;
}

.map-container {
  margin-top: 30px;
  overflow: hidden;
  position: relative;
  max-width: 100%;
}

.map-container iframe {
  width: 100%;
  height: 400px;
  border: 0;
}

/* Footer Styles */


footer.footer {
  background-color: #000000;
  padding: 30px 120px;
  color: #ffffff;
  font-size: 14px;
  margin-top: auto;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.footer-content {
  display: flex;
  justify-content: center;
  align-items: center; 
  flex-wrap: wrap;
}

.footer-logo {
  margin-right: 20px;
}

.footer-logo img {
  max-height: 50px;
}

.footer-column {
  flex: 1;
  margin-right: 20px;
  margin-left:60px;
  margin-bottom: 20px;
}

.footer-column h5 {
  font-size: 16px;
  margin-bottom: 10px;
  color: #ffffff;
  font-weight: bold;
}

.footer-column a {
  color: #cacaca;
  text-decoration: none;
  display: block;
  margin-bottom: 5px;
}

.footer-column a:hover {
  text-decoration: underline;
}

/* Responsive styles */
@media screen and (max-width: 1088px) {
  .navbar-menu {
    display: flex;
    flex-direction: row !important;
    align-items: center;
    height: 10px !important;
  }

  .navbar-start {
    flex-direction: row !important;
    align-items: center;
  }

  .navbar-item {
    margin-right: 2px;
    margin-bottom: 10px;
    margin-top: 20px;
    border-radius: 8px;
  }
  .swiper-container {
    width: 90%;
    margin: 20px auto;
  }

  .swiper-slide img {
    width: 100%;
    object-fit: cover;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  }
}

